--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ textarea{
 .encabezado{
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    /*justify-content: start;*/
     align-items: center;
     gap: 0.2rem;
     padding: 5px;
@@ -23,15 +23,13 @@ textarea{
 }
 
 .logo{
-    width: 15%;
+    width: 12%;
 }
 
 .titulo{
     color: #6B5777;
     font-weight: 700;
-    font-size: 60px;
-    
-   
+    font-size: 60px;  
 }
 /*main*/
 .conteiner{
@@ -39,16 +37,17 @@ textarea{
     margin: auto 40px auto auto;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    min-height: calc(100vh - 40px - 72px);
+    /*min-height: calc(100vh - 40px - 72px);*/
+    height: 60%;
     align-items:end;
 }
 /*lado left*/
 .cifrar{
-    height:90%;
+    height:95%;
     display:flex;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 90%;    
+    width: 100%;    
 }
 .ingresoTexto{
     width: 80%;
@@ -123,6 +122,7 @@ textarea{
 .descifra{
     background-color: #fcfcfc;
     height: calc(100% + 48px);
+    width: 100%;
     border-radius: 32px;
     padding: 20px 20px 5px 20px;
     box-sizing: border-box;
@@ -153,6 +153,7 @@ textarea{
     font-weight: bold;
     border: none;
     outline: none;
+    text-align: center;
 }
 
 .mensajeEncriptado::placeholder:focus{
@@ -185,6 +186,7 @@ textarea{
     transform: scale(1.1);
 } 
 .footer{
+    background-color: #F3F5FC;
     padding:  5px;
     height:  10px;
     font-size: 12px;
@@ -204,13 +206,13 @@ textarea{
 .mensajeEncriptado{
     height: 90%;
 }
+
 }
 
 @media screen and (max-width: 800px){
     .encabezado{
         text-align: center;
         grid-template-rows: auto auto;
-
     }
     .titulo{
         font-size: 30px;
