--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ textarea{
    gap: 24px;
    margin-top: 16px;
    flex-direction: row;
-   flex-wrap: wrap;
+   /*flex-wrap: wrap;*/
 }
 .btn-encriptar, .btn-desencriptar, .btn-copiar{
     border: 1px solid #0A3871;
