--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ textarea{
    gap: 24px;
    margin-top: 16px;
    flex-direction: row;
-   /*flex-wrap: wrap;*/
+   flex-wrap: wrap;
 }
 .btn-encriptar, .btn-desencriptar, .btn-copiar{
     border: 1px solid #0A3871;
@@ -240,11 +240,11 @@ textarea{
     }
     .ingresoTexto{
         width: 90%;
-           
+        height: 50%;     
     }
     .elementos{
         width: auto;
-        margin-left: 15px;
+        /*margin-left: 15px;*/
     }
     .btn-desencriptar{
         height: 100%;
@@ -284,6 +284,14 @@ textarea{
         height: 100%;
         width: auto;
     }
+    .botones{
+        margin-top: 0%;
+        gap: 5px;
+    }
+    .btn-desencriptar{
+        height: 65%;
+    }
+    
     .descifra{
         height: 100%;
     }
@@ -323,7 +331,7 @@ textarea{
     }
     .botones{
         width: 100%;
-        display: block;
+        /*display: block;*/
         justify-content: space-between;   
     }
     .btn-encriptar, .btn-desencriptar,.btn-copiar{
