--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ textarea{
 }
 /*lado left*/
 .cifrar{
-    height:95%;
+    height:100%;
     display:flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -50,7 +50,7 @@ textarea{
 }
 .ingresoTexto{
     width: 80%;
-    height: 65%;
+    height: 50%;
     font-size: 32px;
     color: #0A3871;
     resize: none;
@@ -123,7 +123,7 @@ textarea{
     height: calc(100% + 48px);
     width: 100%;
     border-radius: 32px;
-    padding: 20px 20px 20px 20px;
+    padding: 20px 20px 40px 20px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -163,8 +163,7 @@ textarea{
 .mensajeEncriptado.ajustar{
     text-align: left;
     font-weight: lighter;
-    height: 80%;
-    
+    height: 70%;
 }
 .parrafo-mensaje{
     color: #495057;
@@ -288,9 +287,9 @@ textarea{
         margin-top: 0%;
         gap: 5px;
     }
-    .btn-desencriptar{
+    /*.btn-desencriptar{
         height: 65%;
-    }
+    }*/
     
     .descifra{
         height: 100%;
