--- a/styles.css
+++ b/styles.css
@@ -37,15 +37,9 @@ textarea{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    /*gap: 1rem;*/
     height: 95vh;
     min-height: calc(100vh - 40px - 72px);
-    /*padding: 1rem;*/
-    /*display: grid;
-    grid-template-columns: 2fr 1fr;
-    min-height: calc(100vh - 40px - 72px);
-    /*height: 60%;*/
-    /*align-items:end;*/
 }
 /*lado left*/
 .cifrar{
@@ -193,7 +187,7 @@ textarea{
     transform: scale(1.1);
 } 
 .footer{
-    background-color: #d1b3e2;
+    background-color: #6B5777;
     padding:  5px;
     height:  15px;
     font-size: 12px;
@@ -201,7 +195,7 @@ textarea{
     width: 100%;
     display: flex;
     justify-content: center;
-    color: #495057;  
+    color: rgb(202, 192, 192);  
     margin-top: 2 rem;   
 }
 
@@ -235,7 +229,7 @@ textarea{
 @media screen and (max-width: 800px){
     .encabezado{
         text-align: center;
-        width: 75%;
+        width: 80%;
         justify-content: space-between;
     }
     .logo{
@@ -272,15 +266,35 @@ textarea{
     }
     .descifra{
         height: 25%;
-        width: 70%;
+        width: 65%;
+        margin-bottom: 4%;
+        padding-bottom: 20px;
+    }
+    .mensajeEncriptado{
+        align-items: center;
+        width: 90%;
     }
     .imagenBuscador{
         display: none;
+    }
+    .btn-copiar{
+        height: 50%;
     }
     .footer{
         height: auto;
     }
     
+}
+@media screen and (max-width: 480px){
+    .descifra{
+        height: 25%;
+        margin-bottom: 5%;
+        padding-bottom: 20px;
+    }
+    
+    .btn-copiar{
+    width: 90%;
+}
 }
 
 @media screen and (max-width: 360px){
@@ -289,27 +303,26 @@ textarea{
         height: auto;
     }
     .encabezado{
-        width: 100%;
+        width: 95%;
         margin-top: 12px;
         height: 10%;
     }
     .logo{
-        size:auto;
+        width: 25%;
     }
     .titulo{
         width: 85%;
-        font-size: 25px; 
+        font-size: 25.5px; 
     }
     .conteiner{
         flex-direction: column;
         width: 100%;
-        
         height: 100vh;
         padding: 1%;
         margin: auto;
     }
     .cifrar{
-        height: 70%;
+        height: 80%;
         align-items: space-betwwen;
     }
     .ingresoTexto{
@@ -325,18 +338,16 @@ textarea{
     .botones{
         margin-left: 4%;
         width: 100%;
-        /*display: block;*/
         justify-content: space-between;   
     }
     .btn-encriptar, .btn-desencriptar,.btn-copiar{
         width: 100%;
     } 
     .btn-desencriptar{
-        height: 65px;
-        
+        height: 65px;   
     }
     .descifra{
-        width: 100%;
+        width: 90%;
         height: 20%;
     }
     .imagenBuscador{
