--- a/styles.css
+++ b/styles.css
@@ -370,7 +370,7 @@ textarea{
     }
     
 }
-@media screen and (min-width: 300px){
+@media screen and (max-width: 320px){
     .encabezado{
         width: 100%;
         margin-top: 0px;
