--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@ textarea{
 .encabezado{
     display: flex;
     align-items: center;
-    gap: 0.2rem;
-    padding: 5px;
+    /*gap: 0.2rem;*/
+   padding: 5px;
     width: 100%; 
     height: auto;
 }
@@ -86,7 +86,7 @@ textarea{
 .botones{
    display: flex;
    gap: 24px;
-   margin-top: 16px;
+   margin-top: 6px;
    flex-direction: row;
    flex-wrap: wrap;
 }
@@ -136,7 +136,7 @@ textarea{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 30px;
+    gap: 20px;
     align-items: center;
     box-shadow: 0px 24px 32px -8px rgba(0,0,0,0.08);
 }
@@ -195,14 +195,13 @@ textarea{
 .footer{
     background-color: #b18aac;
     padding:  5px;
-    height:  15px;
+    height:  20px;
     font-size: 12px;
     font-weight: bold;
     width: 100%;
     display: flex;
     justify-content: center;
     color: #0A3871;;  
-    margin-top: 2 rem;   
 }
 
 @media screen and (max-width: 1200px) {
@@ -272,9 +271,10 @@ textarea{
     }
     .descifra{
         height: 25%;
-        width: 65%;
+        width: 90%;
         margin-bottom: 4%;
-        padding-bottom: 20px;
+       /* padding-bottom: 20px;*/
+        padding: 8px;
     }
     .mensajeEncriptado{
         align-items: center;
@@ -292,6 +292,9 @@ textarea{
     
 }
 @media screen and (max-width: 480px){
+    .encabezado{
+        width: 85%;
+    }
     .elementos{
         margin-left: 3px;
         width: 90%;
@@ -299,8 +302,8 @@ textarea{
     .descifra{
         height: 25%;
         margin-bottom: 5%;
-        padding-bottom: 20px;
-        width: 75%;
+        padding: 2px;
+        width: 100%;
     }
     
     .btn-copiar{
@@ -315,7 +318,7 @@ textarea{
     }
     .encabezado{
         width: 95%;
-        margin-top: 12px;
+       /* margin-top: 12px;*/
         height: 10%;
     }
     .logo{
@@ -348,7 +351,7 @@ textarea{
     }
     .botones{
         margin-left: 4%;
-        width: 100%;
+        width: 90%;
         justify-content: space-between;   
     }
     .btn-encriptar, .btn-desencriptar,.btn-copiar{
